rust/examples/errors/out-of-bounds-vector/src/main.rs
#[allow(clippy::useless_vec)]
fn main() {
    let v = vec!["apple", "banana", "peach"];
    println!("{}", v[0]);
    println!("{}", v[5]);
}


